Changes and Fixes - Fixed chopppy disappearing grouper and task forms Fix to store new lines as breaks from task descriptions. Also convert back to new line when editing task Replace collapse button arrows Limit grouper and task title lengths to keep collaps button on top row always Add functionality to edit task Add functionality to delete task

--- a/docs/style.css
+++ b/docs/style.css
@@ -36,6 +36,9 @@ header h1{
     color: darkslategray;
     margin: 30px 30px;
 }
+.grouperTitle {
+    width: 80%;
+}
 .taskExpandbtn h4, .grouperExpandbtn h2 {
     margin: 20px;
 }
@@ -67,7 +70,7 @@ header h1{
 }
 .testFormExpand {
     max-height: 0;
-    transition: max-height 450ms;
+    transition: all 450ms;
     overflow-y: hidden;
 }
 .testGrouperExpand {
@@ -100,6 +103,9 @@ header h1{
     background-color: slategrey;
     color: white;
 }
+.newTaskPopup, .newGrouperPopup {
+    transform: scale(0);
+}
 .newTaskForm input, textarea {
     display: block;
 }
@@ -121,15 +127,15 @@ textarea {
     display: inline-block;
     background-color: rgba(211,211,211,0.6);
     border-radius: 10px;
-    min-width: 400px;
-    max-width: 600px;
+    width: 95%;
     word-wrap: break-word;
     vertical-align: top;
     padding-bottom: 10px;
 }
 .taskTitle {
     padding: 10px;
-    height: 50px;
+    min-height: 50px;
+    width: 80%;
     font-size: 200%;
     margin: 10px;
     color: darkslategrey;
@@ -169,7 +175,7 @@ textarea {
     color: whitesmoke;
 }
 #newGrouperTitleField, .taskTitleInput {
-    transition: opacity 300ms;
+    transition: all 300ms;
 }
 .overlayForm {
     position: fixed; /* Sit on top of the page content */
